applications/wikijs/wikijs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  labels:
    app.kubernetes.io/name: wiki
    app.kubernetes.io/instance: wikijs
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 3000
  selector:
    app.kubernetes.io/name: wiki
    app.kubernetes.io/instance: wikijs
